# zero2prod

./: .dockerignore  .env  Cargo.toml  Dockerfile  configuration.toml  flake.nix  spec.yaml
.github/workflows/: general.yml
configuration/: base.toml  local.toml  production.toml
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
