[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
chrono = { version = "0.4.24", default-features = false, features = ["serde", "clock"] }
config = "0.13.3"
hyper = "0.14.26"
once_cell = "1.17.1"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }
serde-aux = "4.2.0"
sqlx = { version = "0.6.3", features = ["postgres", "uuid", "chrono", "migrate", "macros", "runtime-tokio-native-tls", "offline"] }
time = "0.3.20"
tokio = { version = "1.28.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace", "tracing", "request-id", "util"] }
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.7"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
uuid = { version = "1.3.2", features = ["serde", "v4"] }
xdg = "2.5.0"

[dev-dependencies]
reqwest = "0.11.17"
